Fix HTML encoding issues in index.html

--- a/index.html
+++ b/index.html
@@ -242,8 +242,7 @@ Google Digital Marketing & E-commerce Professional Certificate
 
 <h4 class="cert-category">Cloud e Tecnologia</h4>
 <ul class="cert-list">
-<li onclick="openPDF('certificados/aws-cloud.pdf')">AWS – Computação em Nuvem</li>
-<li onclick="openPDF('certificados/banco-dados-amazon.pdf')">Banco de Dados – Amazon</li>
+<li onclick="openPDF('certificados/amazon-banco-dados.pdf')">AWS – Computação em Nuvem</li>
 <li onclick="openPDF('certificados/huawei-5g.pdf')">Huawei – Tecnologia 5G</li>
 </ul>
 
@@ -314,3 +313,4 @@ bar.style.width=bar.dataset.width;
 
 </body>
 </html>
+
