--- a/index.html
+++ b/index.html
@@ -244,7 +244,7 @@ Google Digital Marketing & E-commerce Professional Certificate
 <ul class="cert-list">
 <li onclick="openPDF('certificados/amazon-banco-dados.pdf')">AWS – Computação em Nuvem</li>
 <li onclick="openPDF('certificados/huawei-5g.pdf')">Huawei – Tecnologia 5G</li>
-<li onclick="openPDF('certificados/huawei-5g.pdf')">Bradesco - Atendimento ao cliente</li>
+<li onclick="openPDF('certificados/bradesco-atendimento.pdf')">Bradesco - Atendimento ao cliente</li>
 </ul>
 
 </div>
@@ -314,5 +314,6 @@ bar.style.width=bar.dataset.width;
 
 </body>
 </html>
+
 
 
