Fix HTML encoding issues in index.html

--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@ Perfil analítico, disciplinado e orientado à solução de problemas.
 
 <div class="quick-links">
 <a href="https://github.com/john00833" target="_blank">GitHub</a>
-<a href="https://www.linkedin.com" target="_blank">LinkedIn</a>
+<a href="www.linkedin.com/in/johnmüller-mesquita-93abaa370" target="_blank">LinkedIn</a>
 </div>
 
 <div class="section-title">Portfólio</div>
@@ -314,6 +314,7 @@ bar.style.width=bar.dataset.width;
 
 </body>
 </html>
+
 
 
 
