Refactor index.html for improved structure and content

--- a/index.html
+++ b/index.html
@@ -200,58 +200,98 @@ responsabilidade e evolução contínua.
 </div>
 
 <!-- CERTIFICADOS -->
+<!-- CERTIFICADOS -->
 <div class="card">
 <h3>Certificações</h3>
 
-  </ul>
-
 <h4 class="cert-category">Cloud e Tecnologia</h4>
 <ul class="cert-list">
-<li onclick="openPDF('certificados/amazon-banco-dados.pdf')">AWS – Computação em Nuvem</li>
-<li onclick="openPDF('certificados/huawei-5g.pdf')">Huawei – Tecnologia 5G</li>
-<li onclick="openPDF('certificados/bradesco-atendimento.pdf')">Bradesco - Atendimento ao cliente</li>
+
+<li class="cert-item">
+<span onclick="openPDF('certificados/amazon-banco-dados.pdf')">
+AWS – Banco de Dados na Amazon
+</span>
+<a href="certificados/amazon-banco-dados.pdf" download class="download-icon">📥</a>
+</li>
+
+<li class="cert-item">
+<span onclick="openPDF('certificados/huawei-5g.pdf')">
+Huawei – Tecnologia 5G
+</span>
+<a href="certificados/huawei-5g.pdf" download class="download-icon">📥</a>
+</li>
+
+<li class="cert-item">
+<span onclick="openPDF('certificados/bradesco-atendimento.pdf')">
+Bradesco – Atendimento ao Cliente
+</span>
+<a href="certificados/bradesco-atendimento.pdf" download class="download-icon">📥</a>
+</li>
+
 </ul>
 
 <h4 class="cert-category">Google Digital Marketing & E-commerce</h4>
 <ul class="cert-list">
 
-<li onclick="openPDF('certificados/marketing1.pdf')">
+<li class="cert-item">
+<span onclick="openPDF('certificados/marketing1.pdf')">
 Attract and Engage Customers with Digital Marketing
+</span>
+<a href="certificados/marketing1.pdf" download class="download-icon">📥</a>
 </li>
 
-<li onclick="openPDF('certificados/marketing4.pdf')">
+<li class="cert-item">
+<span onclick="openPDF('certificados/marketing4.pdf')">
 Foundations of Digital Marketing and E-commerce
+</span>
+<a href="certificados/marketing4.pdf" download class="download-icon">📥</a>
 </li>
 
-<li onclick="openPDF('certificados/marketing3.pdf')">
+<li class="cert-item">
+<span onclick="openPDF('certificados/marketing3.pdf')">
 Assess for Success: Marketing Analytics and Measurement
+</span>
+<a href="certificados/marketing3.pdf" download class="download-icon">📥</a>
 </li>
 
-<li onclick="openPDF('certificados/marketing5.pdf')">
+<li class="cert-item">
+<span onclick="openPDF('certificados/marketing5.pdf')">
 Make the Sale: Build, Launch, and Manage E-commerce Stores
+</span>
+<a href="certificados/marketing5.pdf" download class="download-icon">📥</a>
 </li>
 
-<li onclick="openPDF('certificados/marketing6.pdf')">
+<li class="cert-item">
+<span onclick="openPDF('certificados/marketing6.pdf')">
 Satisfaction Guaranteed: Develop Customer Loyalty Online
+</span>
+<a href="certificados/marketing6.pdf" download class="download-icon">📥</a>
 </li>
 
-<li onclick="openPDF('certificados/marketing7.pdf')">
+<li class="cert-item">
+<span onclick="openPDF('certificados/marketing7.pdf')">
 From Likes to Leads: Interact with Customers Online
+</span>
+<a href="certificados/marketing7.pdf" download class="download-icon">📥</a>
 </li>
 
-<li onclick="openPDF('certificados/marketing8.pdf')">
+<li class="cert-item">
+<span onclick="openPDF('certificados/marketing8.pdf')">
 Think Outside the Inbox: Email Marketing
+</span>
+<a href="certificados/marketing8.pdf" download class="download-icon">📥</a>
 </li>
 
-<li onclick="openPDF('certificados/marketing2.pdf')">
+<li class="cert-item">
+<span onclick="openPDF('certificados/marketing2.pdf')">
 Google Digital Marketing & E-commerce Professional Certificate
+</span>
+<a href="certificados/marketing2.pdf" download class="download-icon">📥</a>
 </li>
 
-</div>
+</ul>
 
 </div>
-</div>
-
 <!-- MODAL PDF -->
 <div id="modal" class="modal">
 <div class="modal-content">
@@ -327,6 +367,7 @@ bar.style.width=bar.dataset.width;
 
 </body>
 </html>
+
 
 
 
