Fix HTML encoding issues in index.html

--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@ Perfil analítico, disciplinado e orientado à solução de problemas.
 </div>
 
 <div class="quick-links">
-<a href="https://github.com/john00833" target="_blank">GitHub</a>
+<a href="https://www.instagram.com/jhony_krt?igsh=MWJqcTdqdzJ6OXJjNA%3D%3D&utm_source=qr" target="_blank">Instagram</a>
 <a href="www.linkedin.com/in/johnmüller-mesquita-93abaa370" target="_blank">LinkedIn</a>
 </div>
 
@@ -367,6 +367,7 @@ bar.style.width=bar.dataset.width;
 
 </body>
 </html>
+
 
 
 
