Fix HTML encoding issues in index.html

--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@ Perfil analítico, disciplinado e orientado à solução de problemas.
 <a href="www.linkedin.com/in/johnmüller-mesquita-93abaa370" target="_blank">LinkedIn</a>
 </div>
 
-<div class="section-title">Portfólio</div>
+<div class="section-title">Projetos</div>
 
 <div class="qr-box">
 <img src="qr.png" class="qr-visible" onclick="expandQR()">
@@ -367,6 +367,7 @@ bar.style.width=bar.dataset.width;
 
 </body>
 </html>
+
 
 
 
